fix(file): add missing audio icon for file component

--- a/src/components/file/file.astro
+++ b/src/components/file/file.astro
@@ -58,7 +58,8 @@ function getIcon(path: string) {
         case "flac":
         case "ogg":
         case "aac":
-            return "Audio";
+            return "fa6-solid:file-audio";
+        case "rtf":
         case "txt":
             return "fa6-solid:file-lines";
         case "doc":
